--- a/crud-application-usinf-js-firestore-main/index.html
+++ b/crud-application-usinf-js-firestore-main/index.html
@@ -18,7 +18,7 @@
                     <h3 class="my-3 text-center"><span class="badge badge-info">Bright coding courses</span></h3>
             <form>
                 <div class="input-group">
-                    <input placeholder="Add new courses" type="text" class="form-control" id="course">
+                    <input required placeholder="Add new courses" type="text" class="form-control" id="course">
                     <div class="input-group-append">
                         <input type="submit" class="btn btn-outline-secondary"></input>
                     </div>
@@ -71,7 +71,7 @@
                     created_at: Timestamp.fromDate(now),
                 }
                 addDoc(collection(db,"courses"),course)
-                .then(res => console.log("course added"))
+                .then(res => form.reset())
                 .catch(err => console.log(err));
              });
 
@@ -95,33 +95,29 @@
                     .catch(err => console.log(err));
                 }
              });
-<<<<<<< HEAD
-=======
+
              // function to delete
              const deleteCourse = (id)=>{
-                const courses = document.querySelectorAll('li');
-                courses.forEach(course=>{
-                    if(course.getAttribute('id') === id){
-                        course.remove();
-                    }
-                });
+                if(confirm("Are you sure to delete this course")){
+                    const courses = document.querySelectorAll('li');
+                    courses.forEach(course=>{
+                        if(course.getAttribute('id') === id){
+                            course.remove();
+                        }
+                    });
+                }
              }
->>>>>>> 79c8b49 (seconf commit)
             //  const querySnapshot = await getDocs(collection(db,"courses")); 
 	        //  querySnapshot.forEach((doc)=>{addCourse(doc.data());});
             onSnapshot(collection(db, "courses"), (snapshot) => {
             console.log(snapshot.docChanges());
             snapshot.docChanges().forEach((change) => {
                 console.log(change.doc.id);
-<<<<<<< HEAD
-                addCourse(change.doc.data(), change.doc.id);
-=======
                 if(change.type === 'added' ){
                     addCourse(change.doc.data(), change.doc.id);
                 }else{
                     deleteCourse(change.doc.id);
                 }
->>>>>>> 79c8b49 (seconf commit)
                 });
             });
            
